GMM_Main/src/objects/Additional_Activities__c.object
<CustomObject>
    <fields>
        <fullName>AA_Activity_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AA_Activity_Complete__c</fullName>
        <formula>IF(ISNULL(AA_Record_Completed_Date__c),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AA_Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_CC_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AA_Changes_to_Plan_Comments__c</fullName>
        <label>Changes to Plan/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AA_Final_Completed_Letter__c</fullName>
        <label>Final/Completed (Letter)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AA_Follow_Up_Actions_Reqd_Letter__c</fullName>
        <label>Follow Up Actions Reqd (Letter)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AA_Follow_Up_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AA_Follow_Up_Completion_Date__c</fullName>
        <label>Follow Up Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AA_Follow_up_Planned_Date__c</fullName>
        <label>Follow-up Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_Grant_Close_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Close Out</label>
        <referenceTo>Grant_Close_Out__c</referenceTo>
        <relationshipLabel>Additional Activities</relationshipLabel>
        <relationshipName>Additional_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AA_Inactivate_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactivate Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AA_Inactive_Record_Reason__c</fullName>
        <label>Inactive Record (Reason)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AA_Internal_Staff_Notes__c</fullName>
        <label>Internal Staff Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AA_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AA_Length__c</fullName>
        <label>Length</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_Master_Award_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Award Name</label>
        <referenceTo>Master_Award__c</referenceTo>
        <relationshipLabel>Additional Activities</relationshipLabel>
        <relationshipName>Additional_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AA_Monitoring_Activity__c</fullName>
        <label>Monitoring Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Programmatic &amp; Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Visit – Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawdown Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site Training/Technical Assistance (T/TA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Standards review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted/Issue-based Site Visit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AA_Monitoring_Fiscal_Year__c</fullName>
        <label>Monitoring Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_Notification_Letter__c</fullName>
        <label>Notification (Letter)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AA_Other_Team_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Team User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AA_Planned_Month__c</fullName>
        <label>Planned Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_Record_Completed_Date__c</fullName>
        <label>Record Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AA_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Monitoring</label>
        <referenceTo>Grant_Monitoring__c</referenceTo>
        <relationshipLabel>Additional Activities</relationshipLabel>
        <relationshipName>Additional_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiating_Office__c</fullName>
        <label>Initiating Office</label>
        <picklist>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint – Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint – Financial</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Additional Activities</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Additional Activities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AA_Monitoring_Fiscal_Year</fullName>
        <active>true</active>
        <description>Requires 4 characters in the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>LEN(TRIM( AA_Monitoring_Fiscal_Year__c  ))&lt;4</errorConditionFormula>
        <errorDisplayField>AA_Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Requires 4 characters in the Monitoring Fiscal Year field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AA_Monitoring_Fiscal_Year_Number_only</fullName>
        <active>true</active>
        <description>Requires only numbers entered into the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>NOT(ISNUMBER(  AA_Monitoring_Fiscal_Year__c  ))</errorConditionFormula>
        <errorDisplayField>AA_Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Only enter numbers into the Monitoring Fiscal Year field.</errorMessage>
    </validationRules>
</CustomObject>